# battery-embed-4

./: .gitignore  CMakeLists.txt
subdir/: CMakeLists.txt  foo.cc
